@@ -1,12 +1,11 @@
 apply plugin: "ivy-publish"
 apply plugin: 'maven'  
 apply plugin: 'maven-publish'  
+apply plugin: 'signing'
+apply plugin: 'eclipse'
 
-//group = 'cn.featherfly'
-//version = '1.2.2'
-
-//sourceCompatibility = 1.7  
-//targetCompatibility = 1.7  
+sourceCompatibility = 1.7  
+targetCompatibility = 1.7
 
 sourceSets {
     main {
@@ -17,10 +16,64 @@ sourceSets {
 }
 
 dependencies {
-    compile 'cn.featherfly:featherfly-common:latest.integration'
+    compile 'cn.featherfly:featherfly-common:1.2.6'
     compile 'javassist:javassist:3.12.1.GA'
 }
 
+//为所有的jar包做数字签名  
+signing {  
+    sign configurations.archives  
+}  
+
+uploadArchives {  
+    repositories {
+        mavenDeployer {  
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) } 
+            repository(url:"https://oss.sonatype.org/service/local/staging/deploy/maven2") {  
+                authentication(userName: 'yufei', password: 'yufeimvn101')  
+            }  
+            pom.project {  
+                name project.name  
+                packaging 'jar'
+                description 'common bean tool use javassist'  
+                url 'https://github.com/featherfly/common.git'  
+                scm {  
+                    url 'scm:git@github.com:featherfly/common.git'  
+                    connection 'scm:git@github.com:featherfly/common.git'  
+                    developerConnection 'git@github.com:featherfly/common.git'  
+                }  
+                licenses {  
+                    license {  
+                        name 'The Apache Software License, Version 2.0'  
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'  
+                        distribution 'repo'  
+                    }  
+                }  
+                developers {  
+                    developer {  
+                        id 'featherfly'  
+                        name 'Yufei'
+                    }  
+                }  
+            }  
+        }  
+    }  
+}
+/*
+test {
+    useTestNG()
+    testLogging.showStandardStreams = true
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+    jvmArgs '-XX:MaxPermSize=256m'
+    beforeTest { descriptor ->
+        logger.lifecycle("Running test: " + descriptor)
+    }
+    onOutput { descriptor, event ->
+        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
+    }
+}
+*/
 jar {
     manifest.attributes 'Build-Name': archivesBaseName
 }
